--- a/style/style_course.css
+++ b/style/style_course.css
@@ -15,6 +15,30 @@
     height: 100%;
     min-width: min-content;
     max-width: 20%;
+
+    /* Для Firefox */
+    scrollbar-width: thin;
+    scrollbar-color: #fff #444;
+}
+
+/* Для WebKit-браузеров */
+.course__sidebar::-webkit-scrollbar {
+    width: 10px;
+}
+
+.course__sidebar::-webkit-scrollbar-track {
+    background: #444;
+    border-radius: 20px;
+}
+
+.course__sidebar::-webkit-scrollbar-thumb {
+    background: #fff;
+    border-radius: 20px;
+    border: 2px solid #333;
+}
+
+.course__sidebar::-webkit-scrollbar-thumb:hover {
+    background: #f0f0f0;
 }
 
 .course__sidebar h3 {
@@ -37,12 +61,20 @@
     text-align: left;
     cursor: pointer;
     outline: none;
+    /* border-radius: 10px; */
+    margin: 5px;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
 }
-
+.course__accordion-section:hover {
+    background-color: #555;
+}
 .course__accordion-lecture {
     list-style: none;
     padding: 0;
     margin: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease, opacity 0.3s ease;
 }
 
 .course__accordion-lecture li {
@@ -58,6 +90,8 @@
 
 .course__accordion-lecture a:hover {
     background-color: #555;
+    /* border-radius: 10px;  */
+    transition: all 0.3s ease;
 }
 
 /* Основной контент */
@@ -68,15 +102,41 @@
     height: 100%;
     border-radius: 8px;
     margin: 10px;
+
+    /* Для Firefox */
+    scrollbar-width: thin;
 }
+
+
+/* Для WebKit-браузеров */
+.course__content::-webkit-scrollbar {
+    width: 10px;
+}
+
+.course__content::-webkit-scrollbar-track {
+    background: #444;
+    border-radius: 20px;
+}
+
+.course__content::-webkit-scrollbar-thumb {
+    background: #fff;
+    border-radius: 20px;
+    border: 2px solid #333;
+}
+
+.course__content::-webkit-scrollbar-thumb:hover {
+    background: #f0f0f0;
+}
+
 .cours__lecture {
     display: none; 
     background-color: #fff;
     margin-bottom: 70px;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
     position: relative; /* Для позиционирования кнопки "Следующая лекция" */
+    transition: opacity 0.3s ease, transform 0.3s ease; /* Плавный переход */
 }
 
 .cours__lecture-header {
@@ -121,8 +181,45 @@
 }
 /* Подсветка активной ссылки в сайдбаре */
 .course__accordion-lecture a.active {
-    background-color: #fff; /* Белый фон */
-    color: #333; /* Темный текст */
-    font-weight: bold; /* Жирный шрифт */
-    border-radius: 4px; /* Закругленные углы */
+    background-color: #fff; 
+    color: #333; 
+    font-weight: bold;
+    transition: all 0.3s ease; 
+    /* border-radius: 10px;  */
+}
+/* стили для части блока с тестом */
+#test-block {
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+#test-form label {
+    font-weight: bold;
+    display: block;
+    margin-bottom: 10px;
+}
+
+#test-form input,
+#test-form textarea {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+#test-form button {
+    padding: 10px 20px;
+    background-color: #28A745;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#test-form button:hover {
+    background-color: #218838;
 }
