--- a/style/style_course.css
+++ b/style/style_course.css
@@ -1,314 +1,329 @@
 .course__container {
-    display: flex;
-    width: 100%;
-    height: calc(100vh - 157px); /* Вычитаем высоту шапки и подвала */
-    overflow: hidden; /* Предотвращает переполнение */
+  display: flex;
+  width: 100%;
+  height: calc(100vh - 157px); /* Вычитаем высоту шапки и подвала */
+  overflow: hidden; /* Предотвращает переполнение */
 }
 
 /* Сайдбар */
 .course__sidebar {
-    width: 250px;
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    overflow-y: auto;
-    height: 100%;
-    min-width: min-content;
-    max-width: 20%;
+  width: 250px;
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  overflow-y: auto;
+  height: 100%;
+  min-width: min-content;
+  max-width: 20%;
 
-    /* Для Firefox */
-    scrollbar-width: thin;
-    scrollbar-color: #fff #444;
+  /* Для Firefox */
+  scrollbar-width: thin;
+  scrollbar-color: #fff #444;
 }
 
 /* Для WebKit-браузеров */
 .course__sidebar::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
 
 .course__sidebar::-webkit-scrollbar-track {
-    background: #444;
-    border-radius: 20px;
+  background: #444;
+  border-radius: 20px;
 }
 
 .course__sidebar::-webkit-scrollbar-thumb {
-    background: #fff;
-    border-radius: 20px;
-    border: 2px solid #333;
+  background: #fff;
+  border-radius: 20px;
+  border: 2px solid #333;
 }
 
 .course__sidebar::-webkit-scrollbar-thumb:hover {
-    background: #f0f0f0;
+  background: #f0f0f0;
 }
 
 .course__sidebar h3 {
-    margin-bottom: 10px;
-    color: #fff;
+  margin-bottom: 10px;
+  color: #fff;
 }
 
 .course__accordion {
-    list-style: none;
-    padding: 0;
-    padding-bottom: 30px;
+  list-style: none;
+  padding: 0;
+  padding-bottom: 30px;
 }
 
 .course__accordion-section {
-    background-color: #444;
-    color: #fff;
-    border: none;
-    padding: 10px;
-    width: 100%;
-    text-align: left;
-    cursor: pointer;
-    outline: none;
-    /* border-radius: 10px; */
-    margin: 5px;
-    font-size: 16px;
-    transition: background-color 0.3s ease;
+  background-color: #444;
+  color: #fff;
+  border: none;
+  padding: 10px;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
+  /* border-radius: 10px; */
+  margin: 5px;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
 }
 .course__accordion-section:hover {
-    background-color: #555;
+  background-color: #555;
 }
 .course__accordion-lecture {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    overflow: hidden;
-    transition: max-height 0.3s ease, opacity 0.3s ease;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease, opacity 0.3s ease;
 }
 
 .course__accordion-lecture li {
-    padding: 5px 10px;
+  padding: 5px 10px;
 }
 
 .course__accordion-lecture a {
-    color: #fff;
-    text-decoration: none;
-    display: block;
-    padding: 5px 10px;
+  color: #fff;
+  text-decoration: none;
+  display: block;
+  padding: 5px 10px;
 }
 
 .course__accordion-lecture a:hover {
-    background-color: #555;
-    /* border-radius: 10px;  */
-    transition: all 0.3s ease;
+  background-color: #555;
+  /* border-radius: 10px;  */
+  transition: all 0.3s ease;
 }
 
 /* Основной контент */
 .course__content {
-    flex: 1;
-    padding: 10px;
-    overflow-y: auto;
-    height: 100%;
-    border-radius: 8px;
-    margin: 10px;
+  flex: 1;
+  padding: 10px;
+  overflow-y: auto;
+  height: 100%;
+  border-radius: 8px;
+  margin: 10px;
 
-    /* Для Firefox */
-    scrollbar-width: thin;
+  /* Для Firefox */
+  scrollbar-width: thin;
 }
-
 
 /* Для WebKit-браузеров */
 .course__content::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
 
 .course__content::-webkit-scrollbar-track {
-    background: #444;
-    border-radius: 20px;
+  background: #444;
+  border-radius: 20px;
 }
 
 .course__content::-webkit-scrollbar-thumb {
-    background: #fff;
-    border-radius: 20px;
-    border: 2px solid #333;
+  background: #fff;
+  border-radius: 20px;
+  border: 2px solid #333;
 }
 
 .course__content::-webkit-scrollbar-thumb:hover {
-    background: #f0f0f0;
+  background: #f0f0f0;
 }
 
 .cours__lecture {
-    display: none; 
-    background-color: #fff;
-    margin-bottom: 70px;  
-    padding:50px;
-    border-radius: 8px;
-    /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
-    position: relative; /* Для позиционирования кнопки "Следующая лекция" */
-    transition: opacity 0.3s ease, transform 0.3s ease; /* Плавный переход */
+  display: none;
+  background-color: #fff;
+  margin-bottom: 70px;
+  padding: 50px;
+  border-radius: 8px;
+  /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
+  position: relative; /* Для позиционирования кнопки "Следующая лекция" */
+  transition: opacity 0.3s ease, transform 0.3s ease; /* Плавный переход */
 }
 
 .cours__lecture-header {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .cours__lecture article {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .cours__lecture img {
-    max-width: 100%;
-    height: auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
+  max-width: 100%;
+  height: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .course__footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .course__footer button {
-    padding: 10px 20px;
-    background-color: #28A745;
-    color: #fff;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+  padding: 10px 20px;
+  background-color: #28a745;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .course__footer button:hover {
-    background-color: #218838;
+  background-color: #218838;
 }
 
 /* Кнопка "Следующая лекция" */
 #course__next-lecture {
-    position: absolute;
-    right: 20px;
+  position: absolute;
+  right: 20px;
 }
 /* Подсветка активной ссылки в сайдбаре */
 .course__accordion-lecture a.active {
-    background-color: #fff; 
-    color: #333; 
-    font-weight: bold;
-    transition: all 0.3s ease; 
-    /* border-radius: 10px;  */
+  background-color: #fff;
+  color: #333;
+  font-weight: bold;
+  transition: all 0.3s ease;
+  /* border-radius: 10px;  */
 }
 /* стили для части блока с тестом */
 #test-block {
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: #f9f9f9;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 #test-form label {
-    font-weight: bold;
-    display: block;
-    margin-bottom: 10px;
+  font-weight: bold;
+  display: block;
+  margin-bottom: 10px;
 }
 
 #test-form input,
 #test-form textarea {
-    width: 100%;
-    padding: 10px;
-    margin-top: 5px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+  width: 100%;
+  padding: 10px;
+  margin-top: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
 #test-form button {
-    padding: 10px 20px;
-    background-color: #28A745;
-    color: #fff;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+  padding: 10px 20px;
+  background-color: #28a745;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 #test-form button:hover {
-    background-color: #218838;
+  background-color: #218838;
 }
 /* Стиль для основного блока */
 .question-block {
-    width: 100%;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #fff; /* Белый фон */
-    border: 2px solid #000; /* Черная обводка */
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff; /* Белый фон */
+  border: 2px solid #000; /* Черная обводка */
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 /* Стиль заголовка вопроса */
 .question-title {
-    font-size: 18px;
-    margin-bottom: 10px;
-    color: #333;
+  font-size: 18px;
+  margin-bottom: 10px;
+  color: #333;
 }
 
 /* Стиль линии разделителя */
 .separator {
-    border: none;
-    height: 1px;
-    background-color: #ccc;
-    margin: 10px 0;
+  border: none;
+  height: 1px;
+  background-color: #ccc;
+  margin: 10px 0;
 }
 
 /* Стиль для формы с вариантами ответов */
 .test__form-block {
-    background-color: #fff; /* Белый фон для формы */
-    padding: 10px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Тень для формы */
+  background-color: #fff; /* Белый фон для формы */
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Тень для формы */
 }
 
 /* Стиль для вариантов ответов */
 .answer-option {
-    display: flex; /* Используем flexbox для выравнивания */
-    align-items: center; /* Выравнивание по вертикали */
-    margin-bottom: 10px;
-    font-size: 16px;
-    color: #333;
+  display: flex; /* Используем flexbox для выравнивания */
+  align-items: center; /* Выравнивание по вертикали */
+  margin-bottom: 10px;
+  font-size: 16px;
+  color: #333;
 }
 
 /* Стилизация радиокнопок */
 .answer-option input[type="radio"] {
-    margin-right: 10px; /* Отступ между радиокнопкой и текстом */
-    accent-color: #000; /* Цвет активной радиокнопки */
+  margin-right: 10px; /* Отступ между радиокнопкой и текстом */
+  accent-color: #000; /* Цвет активной радиокнопки */
 }
 
 /* Стилизация текста рядом с радиокнопками */
 .answer-option label {
-    cursor: pointer;
-    text-align: left; /* Выравнивание текста по левому краю */
+  cursor: pointer;
+  text-align: left; /* Выравнивание текста по левому краю */
 }
-.btn-form{
-    padding: 10px 20px;
-    background-color: #28A745;
-    color: #fff;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+.btn-form {
+  padding: 10px 20px;
+  background-color: #28a745;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 .test-results {
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
-    padding: 15px;
-    border-radius: 5px;
-    text-align: center;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  padding: 15px;
+  border-radius: 5px;
+  text-align: center;
 }
 
 .result-message {
-    font-weight: bold;
-    color: #333;
+  font-weight: bold;
+  color: #333;
 }
 
 .result-grade {
-    font-size: 20px;
-    color: #007bff;
+  font-size: 20px;
+  color: #007bff;
 }
 .grade-block {
-    margin-top: 5px;
-    text-align: center;
+  margin-top: 5px;
+  text-align: center;
 }
 
 .grade-number {
-    font-size: 100px;
-    font-weight: bold;
+  font-size: 100px;
+  font-weight: bold;
+}
+/* стиль для спинера загрузки */
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #007bff;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 1s linear infinite;
+  margin: 10px auto;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
 }
