--- a/style/style_main.css
+++ b/style/style_main.css
@@ -16,6 +16,9 @@
   display: grid;
   grid-template-rows: auto 1fr auto; /* Шапка → Контент → Подвал */
   /* min-height: 98vh; */
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 .wrapper a {
   color: #ffffff; /* Белый цвет для всех ссылок */
@@ -65,6 +68,7 @@ footer {
   display: flex;
   justify-content: center;
   bottom: 0;
+  margin-top: auto;
 }
 
 .footer__container {
